# cuckoo_nest

./: .clang-tidy  .gitignore  BUILD_GUIDE.md  CMakeLists.txt  README.md  UNIT_TESTS_SUMMARY.md  build.sh  build_arm.sh  build_icons.sh  config.emulation.json  config.example.json  config.json  install_deps.sh  lv_conf.h  up.sh
.github/workflows/: cmake-single-platform.yml  main-build.yml  pull-request-action.yml
cmake/: arm-toolchain.cmake  host-toolchain.cmake  json11.patch
docs/: AddingFontAwesomeIcons.md
include/: CTick.hpp
lvgl/: CMakeLists.txt
spdlog/: USAGE_EXAMPLE.md
src/: CMakeLists.txt  ConfigurationReader.cpp  ConfigurationReader.hpp  ConfigurationReader_README.md  IDateTimeProvider.hpp  InputEvent.hpp  ScreenManager.cpp  ScreenManager.hpp  SystemDateTimeProvider.hpp  main.cpp
src/Backplate/: BackplateComms.cpp  BackplateComms.hpp  BaudRate.hpp  CRC-CITT.hpp  CommandMessage.cpp  CommandMessage.hpp  Example.c  ISerialPort.hpp  Message.cpp  Message.hpp  MessageParser.cpp  MessageParser.hpp  MessageType.hxx  ResponseMessage.cpp  ResponseMessage.hpp  UnixSerialPort.cpp  UnixSerialPort.hpp
src/HAL/: Backlight.cpp  Backlight.hpp  Beeper.cpp  Beeper.hpp  BitmapFont.hpp  Display.cpp  Display.hpp  HAL.hpp  IDisplay.hpp  InputEvent.hpp  Inputs.cpp  Inputs.hpp
src/Integrations/: ActionHomeAssistantService.hpp  CurlWrapper.hpp  CurlWrapperJson.cpp  HomeAssistantBase.hpp  HomeAssistantCreds.hpp  HomeAssistantDimmer.hpp  HomeAssistantSwitch.hpp  IntegrationContainer.cpp  IntegrationContainer.hpp  IntegrationDimmerBase.hpp  IntegrationSwitchBase.hpp
src/Screens/: AnalogClockScreen.cpp  AnalogClockScreen.hpp  DimmerScreen.cpp  DimmerScreen.hpp  HomeScreen.cpp  HomeScreen.hpp  MenuIcon.hpp  MenuItem.hpp  MenuScreen.cpp  MenuScreen.hpp  ScreenBase.hpp  ScreenBase.hxx  SwitchScreen.cpp  SwitchScreen.hpp
src/fonts/: CuckooFontAwesome.c  CuckooFontAwesomeDefs.h  cuckoo_fontawesome.c
tests/: CMakeLists.txt  TestBackplateComms.cpp  TestBackplateCommsMessage.cpp  TestCRCCITT.cpp  TestConfigurationReader.cpp  TestIntegrationContainer.cpp  TestMessageParser.cpp  TestScreenManager.cpp  TestScreenManagerConfigLoad.cpp  test_screen_manager.cpp
tests/ScreenStubs/: AnalogClockScreen.cpp  DimmerScreen.cpp  HomeScreen.cpp  MenuScreen.cpp  SwitchScreen.cpp
tests/spdlog/: spdlog.h
tests/spdlog/sinks/: basic_file_sink.h  stdout_color_sinks.h
toolchain/lib/: libstdc++.so.6.0.18
